@@ -1,5 +1,6 @@
 next
 ----
+-genemark-es: new component
 -tmhmm2bsml: changed Seq-data-import[@id] value to ensure id does not start with numbers.
 
 ergatis-v2r11b1
